add scrolling on button click on research page

--- a/research.html
+++ b/research.html
@@ -138,7 +138,7 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <button class="btn blue-gradient btn-rounded"><big>3D Scene Reconstruction</big><br>click here</button>
+                                        <button class="btn0 btn blue-gradient btn-rounded"><big class='btn0'>3D Scene Reconstruction</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
@@ -152,26 +152,12 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <button class="btn peach-gradient btn-rounded"><big>Recognition</big><br>click here</button>
+                                        <button class="btn1 btn peach-gradient btn-rounded"><big class='btn1'>Recognition</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
                             </div>
                             <!--/Second slide-->
-                            <!--Third slide-->
-                            <div class="carousel-item">
-                                <div class="card card-image d-block w-100" style="background-image: url(img/motionAnalysis.png); height:600px;" alt="First slide">
-
-                                    <!-- Content -->
-                                    <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                                    </div>
-                                    <div class="carousel-caption">
-                                        <button class="btn aqua-gradient btn-rounded"><big>Motion Analysis</big><br>click here</button>
-                                    </div>
-                                    <!-- Content -->
-                                </div>
-                            </div>
-                            <!--/Third slide-->
                             <!--fifth slide-->
                             <div class="carousel-item">
                                 <div class="card card-image d-block w-100" style="background-image: url(img/cellPhenotype.jpg); height:600px;" alt="Fifth slide">
@@ -180,26 +166,26 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <button class="btn purple-gradient btn-rounded"><big>Cell Phenotype Recognition</big><br>click here</button>
+                                        <button class="btn2 btn purple-gradient btn-rounded"><big class='btn2'>Cell Phenotype Recognition</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
                             </div>
                             <!--fifth slide-->
-                            <!--sixth slide-->
+                            <!--Third slide-->
                             <div class="carousel-item">
-                                <div class="card card-image d-block w-100" style="background-image: url(img/mri.jpg); height:600px;" alt="Sixth slide">
+                                <div class="card card-image d-block w-100" style="background-image: url(img/motionAnalysis.png); height:600px;" alt="First slide">
 
                                     <!-- Content -->
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <button class="btn aqua-gradient btn-rounded"><big>Imaging with MRI</big><br>click here</button>
+                                        <button class="btn3 btn aqua-gradient btn-rounded"><big class='btn3'>Motion Analysis</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
                             </div>
-                            <!--/sixth slide-->
+                            <!--/Third slide-->
                             <!--fourth slide-->
                             <div class="carousel-item" interval:30000;>
                                 <div class="card card-image d-block w-100" style="background-image: url(img/image-understandingSystem.png); height:600px;"
@@ -209,13 +195,27 @@
                                     <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
                                     </div>
                                     <div class="carousel-caption">
-                                        <button class="btn blue-gradient btn-rounded"><big>Image-Understanding</big><br>click here</button>
+                                        <button class="btn4 btn blue-gradient btn-rounded"><big class='btn4'>Image-Understanding</big><br>click here</button>
                                     </div>
                                     <!-- Content -->
                                 </div>
 
                             </div>
                             <!--fourth slide-->
+                            <!--sixth slide-->
+                            <div class="carousel-item">
+                                <div class="card card-image d-block w-100" style="background-image: url(img/mri.jpg); height:600px;" alt="Sixth slide">
+
+                                    <!-- Content -->
+                                    <div style="height:600px;" class="text-white text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                                    </div>
+                                    <div class="carousel-caption">
+                                        <button class="btn5 btn aqua-gradient btn-rounded"><big class='btn5'>Imaging with MRI</big><br>click here</button>
+                                    </div>
+                                    <!-- Content -->
+                                </div>
+                            </div>
+                            <!--/sixth slide-->
 
                         </div>
                         <!--/.Slides-->
@@ -237,7 +237,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5">
+                        <div class="sec0 row pt-5">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
@@ -275,7 +275,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5" id="recognition">
+                        <div class="sec1 row pt-5" id="recognition">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-7 mb-3">
@@ -327,7 +327,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5" id="cellphenotype">
+                        <div class="sec2 row pt-5" id="cellphenotype">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
@@ -365,7 +365,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5">
+                        <div class="sec3 row pt-5">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-7 mb-3">
@@ -402,7 +402,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5">
+                        <div class="sec4 row pt-5">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-5 pr-lg-5 pb-5">
@@ -442,7 +442,7 @@
                         <hr>
 
                         <!--Grid row-->
-                        <div class="row pt-5" id="mri">
+                        <div class="sec5 row pt-5" id="mri">
 
                             <!--Grid column-->
                             <div class="col-lg-6 col-xl-7 mb-3">
@@ -559,6 +559,11 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script>
         new WOW().init();
+        $("button").click(function(e) {
+            $('html,body').animate({
+                scrollTop: $(".sec" + $(e.target).attr('class').split(' ')[0][3]).offset().top - 100
+            }, 'slow');
+        });
     </script>
 </body>
 
