--- a/history.html
+++ b/history.html
@@ -61,28 +61,6 @@
                             <a class="nav-link" href="/team-29.html">Team 29 Info</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav nav-flex-icons">
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.facebook.com/UCLCS.Home/" target="_blank">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://twitter.com/uclcs" target="_blank">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://www.youtube.com/user/UCLComputerScience" target="_blank">
-                                    <i class="fa fa-youtube"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                    <a class="nav-link" href="http://www.linkedin.com/groups?gid=4046543&trk=myg_ugrp_ovr" target="_blank">
-                                        <i class="fa fa-linkedin"></i>
-                                    </a>
-                                </li>
-                        </ul>
                     <!--
                 <form class="form-inline">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -115,7 +93,7 @@
         <div class="container">
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
-                    <h1 class="font-bold light-blue-text my-5">Timeline of Major Events</h1>
+                    <h1 class="font-bold light-blue-text my-5">Timeline of Major Events:</h1>
                 </div>
             </div>
         </div>
@@ -130,10 +108,11 @@
                 </div>
 
                 <div class="tl-content">
-                    <h1>The field of computer vision emerged in 1950 with the invention of perceptrons by Frank Rosenblatt</h1>
-                    <p>This machine was designed for image recognition which was reported as the embryo of an electronic computer.It
-                        used 20×20 cadmium sulfide photocells to produce a 400-pixel image. However, it is only capable of
-                        learning linearly separable patterns, like sort images into very simple categories like triangle
+                    <h1>The field of computer vision emerged in 1950 with the invention of "perceptron" by Frank Rosenblatt</h1>
+                    <p>This machine was designed for image recognition which was reported as the embryo of an electronic computer. It
+                        used 20×20 photocells to
+                        produce a 400-pixel image. However, it
+                        only capable of sorting images into very simple categories like triangle
                         and square.</p>
                 </div>
 
@@ -149,15 +128,14 @@
 
                 <div class="tl-content">
                     <h1 class="f3 text--accent ttu">Marvin Minsky and Seymour Papert improved the algorithm of perceptrons</h1>
-                    <p>Studies in the 1970s formed the early foundations for many of the computer vision algorithms that exist
-                        today, including extraction of edges from images, polyhedral modeling, and motion estimation.</p>
+                    <p>Studies in the 1970s formed the early foundations for many computer vision algorithms which are used widely till now, including extraction of edges from images, motion estimation, and some basic graph models.</p>
                 </div>
 
             </div>
 
             <div class="tl-item">
 
-                <div class="tl-bg" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/7b/Shading1.jpg)"></div>
+                <div class="tl-bg" style="background-image: url(https://visualisingadvocacy.org/sites/visualisingadvocacy.org/files/generative-portraits-dead-presidents.jpg)"></div>
 
                 <div class="tl-year">
                     <p class="f2 heading--sanSerif">1980</p>
@@ -165,8 +143,7 @@
 
                 <div class="tl-content">
                     <h1 class="f3 text--accent ttu">Image processing</h1>
-                    <p>This decade saw studies on image reconstructions based on mathematical method, including the concept
-                        of scale-space(blur image), image morphing, variations of graph cut and shading.</p>
+                    <p>This decade saw studies on image processing based on mathematical method, including the concept of blur image, image morphing, graph cutting and shading(same as the photo effects and filters which we are using these days).</p>
                 </div>
 
             </div>
@@ -181,11 +158,7 @@
 
                 <div class="tl-content">
                     <h1 class="f3 text--accent ttu">eigenface</h1>
-                    <p>Things started to heat up in the second half of the 90s due to the improvement on hardware. This decade
-                        also marked the first time statistical learning techniques were used in practice to recognize faces
-                        in images. Scientists use geometric approach to achieve face recognition. Toward the end of the 1990s,
-                        we saw an increased interaction between the fields of computer graphics and computer vision. This
-                        included image-based rendering, view interpolation, panoramic image stitching.</p>
+                    <p>Things started to heat up in the second half of the 90s due to the improvement on hardware. In this decade, Scientists use geometric approach to achieve face recognition. Toward the end of the 1990s, we saw an increased interaction between the fields of computer graphics and computer vision, like the invention of ultrasonography. </p>
                 </div>
             </div>
         </section>
