--- a/history.html
+++ b/history.html
@@ -158,7 +158,7 @@
 
                 <div class="tl-content">
                     <h1 class="f3 text--accent ttu">eigenface</h1>
-                    <p>Things started to heat up in the second half of the 90s due to the improvement on hardware. In this decade, Scientists use geometric approach to achieve face recognition. Toward the end of the 1990s, we saw an increased interaction between the fields of computer graphics and computer vision, like the invention of ultrasonography. </p>
+                    <p>Things started to heat up in the second half of the 90s due to the improvement on hardware. In this decade, Scientists use geometric approach to achieve face recognition. Toward the end of the 1990s, we saw an increased interaction between the fields of computer graphics and computer vision, like the invention of Medical ultrasound. </p>
                 </div>
             </div>
         </section>
