--- a/impact.html
+++ b/impact.html
@@ -97,7 +97,7 @@
                                 <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING
                                     <span class="indigo-text font-bold">IMPACT</span>
                                 </h1>
-                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">What has the research done?</h5>
+                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">How we're changing the world.</h5>
                             </div>
                         </div>
                     </div>
@@ -109,12 +109,9 @@
 
     <main>
         <div class="container">
-            <div class="col-md-12 text-center">
-                <h1 class="font-bold light-blue-text my-5">Our Best Projects</h1>
-            </div>
             <section class="section pb-3">
                 <!--Grid row-->
-                <div class="row">
+                <div class="row pt-5">
 
                     <!--Grid column-->
                     <div class="col-md-12 mb-r">
