--- a/team-29.html
+++ b/team-29.html
@@ -96,7 +96,7 @@
                                 <h1 class="display-3 mb-5 wow fadeInDown" data-wow-delay="0.3s">VISION & IMAGING SCIENCE
                                     <span class="indigo-text font-bold">TEAM 29</span>
                                 </h1>
-                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Information about our Team</h5>
+                                <h5 class="font-up mb-5 mt-1 font-bold wow fadeInDown" data-wow-delay="0.3s">Creaters of the website.</h5>
                             </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
 
     <main>
         <div class="container">
-            <div class="row py-5 mt-4">
+            <div class="row pb-4">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">About Us</h1>
                     <p>We are Team 29 for the Computer Science IEP Project 1 of 2017. We were given the task of creating a website to display the research of UCL's <a href="http://vis.cs.ucl.ac.uk/home/" target="_blank">Vision and Imaging</a> department. Our members and roles are:</p>
