--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <main>
         <div class="container">
-            <div class="row py-5 mt-4">
+            <div class="row pb-5">
                 <div class="col-md-12 text-center">
                     <h1 class="font-bold light-blue-text my-5">What We Do</h1>
                     <p>The aim of our research is to extract useful information from images and video, similar to the way the
@@ -266,7 +266,7 @@
 
                     </div>
 
-                    <h1 class="font-bold light-blue-text my-5">Who We are</h1>
+                    <h1 class="font-bold light-blue-text my-5">About us</h1>
 
                     <!--Card-->
                     <div class="card card-cascade wider reverse my-4">
