changed so content mistakes

--- a/research.html
+++ b/research.html
@@ -458,7 +458,7 @@
                                     <div class="col-10">
                                         <h5 class="feature-title font-bold">Microstructure Imaging with Diffusion MRI</h5>
                                         <p class="grey-text">MRI, full name Magnetic Resonance Imaging, is a type of imaging technique mostly
-                                            for medical uses, and is also one that UCL focuses on. The system first first
+                                            for medical uses, and is also one that UCL focuses on. The system first
                                             recieves a responding signal from the tissue it wants to display (how to obtain
                                             the signal is another story so just leave it out), and makes a 3D model of it.
                                             It then shows an image of the model and finally goes through a process called
