home page carousel text more legible

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                                     <div class="mask"></div>
                                 </div>
                                 <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Image Analysis</h3>
-                                    <p>This image shows the use of computer vision to pick out the main features in the structure
+                                    <h3 class="h3-responsive outline">Image Analysis</h3>
+                                    <p class='outline'>This image shows the use of computer vision to pick out the main features in the structure
                                         of a meteorite.</p>
                                 </div>
                             </div>
@@ -146,8 +146,8 @@
                                     <div class="mask"></div>
                                 </div>
                                 <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Medical Imaging</h3>
-                                    <p>The analysis of medical images can be used to aid diagnosis, or be used with robotics
+                                    <h3 class="h3-responsive outline">Medical Imaging</h3>
+                                    <p class='outline'>The analysis of medical images can be used to aid diagnosis, or be used with robotics
                                         during surgery.</p>
                                 </div>
                             </div>
@@ -158,8 +158,8 @@
                                     <div class="mask"></div>
                                 </div>
                                 <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Basic Image Features</h3>
-                                    <p>This involves classifying each pixel of an image into groups to extract edges and regions
+                                    <h3 class="h3-responsive outline">Basic Image Features</h3>
+                                    <p class='outline'>This involves classifying each pixel of an image into groups to extract edges and regions
                                         from an image. These are often compared to a rough sketch by an artist.</p>
                                 </div>
                             </div>
