--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="/history.html">History</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/research.html">The Research</a>
+                            <a class="nav-link" href="/research.html">Research</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/impact.html">Impact</a>
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="#">Get Involved</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/team.html">Research Team</a>
+                            <a class="nav-link" href="/team.html">Our Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/team-29.html">Team 29 Info</a>
@@ -113,7 +113,7 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <p>
-                        <h3>Researchers in our department of Computer Vision and Imaging Science<br>do lots of studies and are greatly involved in the most advanced research areas of many modern technologies that are widely used but still need to be greatly improved.<br> Read on to find out more...</h3>
+                        <h3>Researchers in our department of Computer Vision and Imaging Science<br>do lots of studies and are greatly involved in the most advanced research areas of modern technologies that are widely used. But there is still much to improve.<br> Read on to find out more...</h3>
                     </p>
                     <!--Card-->
                     <!--Carousel Wrapper-->
