--- a/team.html
+++ b/team.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="/history.html">History</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/research.html">The Research</a>
+                            <a class="nav-link" href="/research.html">Research</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/impact.html">Impact</a>
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Research Team</a>
+                            <a class="nav-link" href="#">Our Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/team-29.html">Team 29 Info</a>
