--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link" href="/history.html">History</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/research.html">The Research</a>
+                            <a class="nav-link" href="/research.html">Research</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/impact.html">Impact</a>
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/team.html">Research Team</a>
+                            <a class="nav-link" href="/team.html">Our Team</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/team-29.html">Team 29 Info</a>
