--- a/research.html
+++ b/research.html
@@ -43,13 +43,13 @@
                             <a class="nav-link" href="/history.html">History</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/research.html">Research</a>
+                            <a class="nav-link" href="#">Research</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/impact.html">Impact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Get Involved</a>
+                            <a class="nav-link" href="/get-involved.html">Get Involved</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/team.html">Our Team</a>
