--- a/research.html
+++ b/research.html
@@ -113,7 +113,7 @@
             <div class="row py-5 mt-4">
                 <div class="col-md-12 text-center">
                     <p>
-                        <h4>Researchers in our department of Computer Vision and Imaging Science<br>are greatly involved in the most advanced research areas of modern technologies that are widely used. But there is still much to improve.<br> Read on to find out more...</h4>
+                        <h4>Researchers in our department of Computer Vision and Imaging Science<br>are greatly involved in the most advanced research areas of modern technologies. But there is still much to improve.<br> Read on to find out more...</h4>
                     </p>
                     <!--Card-->
                     <!--Carousel Wrapper-->
